--- a/index.ipynb
+++ b/index.ipynb
@@ -1068,7 +1068,7 @@
    "source": [
     "names_and_ranks = [\n",
     "for namerank in city_indices:\n",
-    "    print(str((city_indices[namerank])+1)+'.  '+city_names[namerank])\n",
+    "    (str((city_indices[namerank])+1)+'.  '+city_names[namerank])\n",
     "]\n",
     "    \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
