Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1066,10 +1066,10 @@
     }
    ],
    "source": [
-    "names_and_ranks = [\n",
+    "names_and_ranks = []\n",
     "for namerank in city_indices:\n",
-    "    (str((city_indices[namerank])+1)+'.  '+city_names[namerank])\n",
-    "]\n",
+    "    names(str((city_indices[namerank])+1)+'.  '+city_names[namerank])\n",
+    "\n",
     "    \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
