Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1068,7 +1068,7 @@
    "source": [
     "names_and_ranks = []\n",
     "for namerank in city_indices:\n",
-    "    names(str((city_indices[namerank])+1)+'.  '+city_names[namerank])\n",
+    "    names_and_ranks.append(str((city_indices[namerank])+1)+'.  '+city_names[namerank])\n",
     "\n",
     "    \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
