--- a/index.ipynb
+++ b/index.ipynb
@@ -1060,7 +1060,7 @@
     "names_and_ranks = []\n",
     "for namerank in city_indices:\n",
     "    names_and_ranks.append(str((city_indices[namerank])+1)+'.  '+city_names[namerank])\n",
-    "\n",
+    "    print names_andM\n",
     "    \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
