--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,14 +1053,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "Missing parentheses in call to 'print'. Did you mean print(names_and_ranks)? (<ipython-input-9-4bc10b2a57df>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-4bc10b2a57df>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    print names_and_ranks\u001b[0m\n\u001b[0m                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m Missing parentheses in call to 'print'. Did you mean print(names_and_ranks)?\n"
+     ]
+    }
+   ],
    "source": [
     "names_and_ranks = []\n",
     "for namerank in city_indices:\n",
     "    names_and_ranks.append(str((city_indices[namerank])+1)+'.  '+city_names[namerank])\n",
-    "    print names_andM\n",
+    "    print names_and_ranks\n",
     "    \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
