--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,15 +1053,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "Missing parentheses in call to 'print'. Did you mean print(names_and_ranks)? (<ipython-input-9-4bc10b2a57df>, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-4bc10b2a57df>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    print names_and_ranks\u001b[0m\n\u001b[0m                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m Missing parentheses in call to 'print'. Did you mean print(names_and_ranks)?\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['1.  Buenos Aires']\n",
+      "['1.  Buenos Aires', '2.  Toronto']\n",
+      "['1.  Buenos Aires', '2.  Toronto', '3.  Marakesh']\n",
+      "['1.  Buenos Aires', '2.  Toronto', '3.  Marakesh', '4.  Albuquerque']\n",
+      "['1.  Buenos Aires', '2.  Toronto', '3.  Marakesh', '4.  Albuquerque', '5.  Los Cabos']\n",
+      "['1.  Buenos Aires', '2.  Toronto', '3.  Marakesh', '4.  Albuquerque', '5.  Los Cabos', '6.  Greenville']\n",
+      "['1.  Buenos Aires', '2.  Toronto', '3.  Marakesh', '4.  Albuquerque', '5.  Los Cabos', '6.  Greenville', '7.  Archipelago Sea']\n",
+      "['1.  Buenos Aires', '2.  Toronto', '3.  Marakesh', '4.  Albuquerque', '5.  Los Cabos', '6.  Greenville', '7.  Archipelago Sea', '8.  Pyeongchang']\n",
+      "['1.  Buenos Aires', '2.  Toronto', '3.  Marakesh', '4.  Albuquerque', '5.  Los Cabos', '6.  Greenville', '7.  Archipelago Sea', '8.  Pyeongchang', '9.  Walla Walla Valley']\n",
+      "['1.  Buenos Aires', '2.  Toronto', '3.  Marakesh', '4.  Albuquerque', '5.  Los Cabos', '6.  Greenville', '7.  Archipelago Sea', '8.  Pyeongchang', '9.  Walla Walla Valley', '10.  Salina Island']\n",
+      "['1.  Buenos Aires', '2.  Toronto', '3.  Marakesh', '4.  Albuquerque', '5.  Los Cabos', '6.  Greenville', '7.  Archipelago Sea', '8.  Pyeongchang', '9.  Walla Walla Valley', '10.  Salina Island', '11.  Solta']\n",
+      "['1.  Buenos Aires', '2.  Toronto', '3.  Marakesh', '4.  Albuquerque', '5.  Los Cabos', '6.  Greenville', '7.  Archipelago Sea', '8.  Pyeongchang', '9.  Walla Walla Valley', '10.  Salina Island', '11.  Solta', '12.  Iguazu Falls']\n"
      ]
     }
    ],
@@ -1069,7 +1079,7 @@
     "names_and_ranks = []\n",
     "for namerank in city_indices:\n",
     "    names_and_ranks.append(str((city_indices[namerank])+1)+'.  '+city_names[namerank])\n",
-    "    print names_and_ranks\n",
+    "    print(names_and_ranks)\n",
     "    \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
