Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1086,16 +1086,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'2.  Toronto'"
+       "'12.  Iguazu Falls'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
