--- a/index.ipynb
+++ b/index.ipynb
@@ -1108,7 +1108,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_populations = []\n"
+    "city_populations = []\n",
+    "for citypop in city_indic"
    ]
   },
   {
