--- a/index.ipynb
+++ b/index.ipynb
@@ -1109,7 +1109,7 @@
    "outputs": [],
    "source": [
     "city_populations = []\n",
-    "for citypop in city_indic"
+    "for citypop in city_indices"
    ]
   },
   {
