--- a/index.ipynb
+++ b/index.ipynb
@@ -1109,7 +1109,8 @@
    "outputs": [],
    "source": [
     "city_populations = []\n",
-    "for citypop in city_indices"
+    "for citypop in city_indices\n",
+    "    city_populati"
    ]
   },
   {
