--- a/index.ipynb
+++ b/index.ipynb
@@ -1110,7 +1110,7 @@
    "source": [
     "city_populations = []\n",
     "for citypop in city_indices\n",
-    "    city_populations.append()"
+    "    city_populations.append(citi)"
    ]
   },
   {
