--- a/index.ipynb
+++ b/index.ipynb
@@ -1110,7 +1110,8 @@
    "source": [
     "city_populations = []\n",
     "for citypop in city_indices\n",
-    "    city_populations.append(cities[citypop][Populations])"
+    "    city_populations.append(cities[citypop][Populations])\n",
+    "print(city_populations)"
    ]
   },
   {
