--- a/index.ipynb
+++ b/index.ipynb
@@ -1122,7 +1122,7 @@
    "source": [
     "city_populations = []\n",
     "for citypop in city_indices:\n",
-    "    city_populations.append(cities[citypop][Populations])\n",
+    "    city_populations.append(cities[citypop]['Populations'])\n",
     "print(city_populations)"
    ]
   },
