--- a/index.ipynb
+++ b/index.ipynb
@@ -2109,7 +2109,8 @@
    "outputs": [],
    "source": [
     "city_areas = []\n",
-    "for area in city_indicies"
+    "for citypop in city_indices:\n",
+    "    city_populations.append(cities[citypop]['Population'])"
    ]
   },
   {
