Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2110,7 +2110,7 @@
    "source": [
     "city_areas = []\n",
     "for citypop in city_indices:\n",
-    "    city_populations.append(cities[citypop]['Population'])"
+    "    city_areas.append(cities[citypop]['Population'])"
    ]
   },
   {
