Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2109,7 +2109,7 @@
    "outputs": [],
    "source": [
     "city_areas = []\n",
-    "for citypop in city_indices:\n",
+    "for area in city_indices:\n",
     "    city_areas.append(cities[citypop]['Population'])"
    ]
   },
