Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2110,7 +2110,7 @@
    "source": [
     "city_areas = []\n",
     "for area in city_indices:\n",
-    "    city_areas.append(cities[area]['Population'])"
+    "    city_areas.append(cities[area]['Area'])\n"
    ]
   },
   {
