--- a/index.ipynb
+++ b/index.ipynb
@@ -2104,13 +2104,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[203, 630, 230, 491, 3751, 68, 2000, 1464, 35, 26, 59, 2396]\n"
+     ]
+    }
+   ],
    "source": [
     "city_areas = []\n",
     "for area in city_indices:\n",
-    "    city_areas.append(cities[area]['Area'])\n"
+    "    city_areas.append(cities[area]['Area'])\n",
+    "print(city_areas)"
    ]
   },
   {
